fix: update the notification method alignment

--- a/src/app/features/notification/notification-settings/notification-settings.component.scss
+++ b/src/app/features/notification/notification-settings/notification-settings.component.scss
@@ -158,6 +158,11 @@
   margin-right: sizes.$large;
 }
 
+.notification-method {
+  width: 60%;
+  margin-left: sizes.$large;
+}
+
 .test-notification-button {
   padding: sizes.$regular sizes.$large;
   cursor: pointer;
